--- a/index.html
+++ b/index.html
@@ -8,14 +8,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 9cfdb883-2067-404a-97f7-6b99880edc78 -->
 
 
 
+    <!-- სათაურის ნაწილი -->
     <header class="header" id="header">
         <h1>REDBERRY</h1>
     </header>
 
     
+    <!-- მთავარი ნაწილი -->
+
+    <main class="main" id="main">
+
+
+        <div class="search-bar">
+            <div class="left-side">
+                <p>რეგიონი</p>
+                <p>საფასო კატეგორია</p>
+                <p>ფართობი</p>
+                <p>საძინებლის რაოდენობა</p>
+            </div>
+
+
+            <div class="right-side">
+                <p>+ ლისტინგის დამატება</p>
+                <p>+ აგენტის დამატება</p>
+            </div>
+        </div>
+
+
+    </main>
+
     
 
 
