--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
     
     <!-- მთავარი ნაწილი -->
 
+
     <main class="main" id="main">
-
-
         <div class="search-bar">
             <div class="left-side">
-                <p>რეგიონი</p>
+                <div class="dropdown">
+                    <!-- Dropdown button with arrow -->
+                    <button id="regionButton">რეგიონი <span class="arrow">▼</span></button>
+                    <div class="dropdown-content" id="regionDropdown">
+                        <!-- Checkbox options will be injected here -->
+                    </div>
+                </div>
                 <p>საფასო კატეგორია</p>
                 <p>ფართობი</p>
                 <p>საძინებლის რაოდენობა</p>
             </div>
-
-
             <div class="right-side">
                 <p>+ ლისტინგის დამატება</p>
                 <p>+ აგენტის დამატება</p>
             </div>
         </div>
-
-
     </main>
-
     
 
 
