--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
     <main class="main" id="main">
         <div class="search-bar">
             <div class="left-side">
+
                 <div class="dropdown">
-                    <!-- Dropdown button with arrow -->
                     <button id="regionButton">რეგიონი<span class="arrow">▼</span></button>
-                    <div class="dropdown-content" id="regionDropdown">
-                        <!-- Checkbox options will be injected here -->
-                    </div>
+                    <div class="dropdown-content" id="regionDropdown"></div>
                 </div>
-                <p>საფასო კატეგორია</p>
+
+
+            <div class="price-dropdown">
+                <button id="priceCategory">საფასო კატეგორია<span class="arrow">▼</span></button>
+                <div class="priceDropdown" id="priceDropdown"></div>
+            </div>
+
+
+
+
+
+
                 <p>ფართობი</p>
                 <p>საძინებლის რაოდენობა</p>
             </div>
