--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
         <div class="search-bar">
             <div class="left-side">
 
+
+
                 <div class="dropdown">
                     <button id="regionButton">რეგიონი<span class="arrow">▼</span></button>
                     <div class="dropdown-content" id="regionDropdown"></div>
                 </div>
 
 
-            <!-- <div class="price-dropdown">
-                <button id="priceCategory">საფასო კატეგორია<span class="arrow">▼</span></button>
-                <div class="priceDropdown" id="priceDropdown"></div>
-            </div> -->
 
             <div class="price-dropdown">
                 <button id="priceCategory">საფასო კატეგორია <span class="arrow">▼</span></button>
@@ -64,7 +62,7 @@
                             <div class="price-option">300,000 ₾</div>
                         </div>
                     </div>
-                    <button class="submit-btn">არჩევა</button>
+                    <button class="price-btn">არჩევა</button>
                 </div>
             </div>
 
@@ -72,11 +70,21 @@
 
  
                 <p>ფართობი</p>
-                <p>საძინებლის რაოდენობა</p>
+
+
+
+
+
+                <button id="bedroom-button">საძინებლის რაოდენობა<span class="arrow">▼</span></button>
+                <div class="bedroom-dropdown" id="bedroom-dropdown"></div>
             </div>
+
+
+
+
             <div class="right-side">
-                <p>+ ლისტინგის დამატება</p>
-                <p>+ აგენტის დამატება</p>
+                <button id="listing-button" class="listing-button">+ ლისტინგის დამატება</button>
+                <button id="agent-button" class="agent-button">+ აგენტის დამატება</button>
             </div>
         </div>
     </main>
