--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- 9cfdb883-2067-404a-97f7-6b99880edc78 -->
+    <!-- 9d05cb39-1e44-4737-94f7-ca2f64951252 -->
     <!-- სათაურის ნაწილი -->
     <header class="header" id="header">
       <h1>REDBERRY</h1>
@@ -168,8 +168,18 @@
       </div>
     </main>
 
-<!-- <div class="cards-component"></div> -->
-
+    <div class="wrapper">
+<div class="cards-component">
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+</div>
+</div>
 
   </body>
 </html>
