--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>RedBerry</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- 9d05cb39-1e44-4737-94f7-ca2f64951252 -->
+    <!-- 9d05fa86-f508-47f7-a9e9-f56543ac5037 -->
     <!-- სათაურის ნაწილი -->
     <header class="header" id="header">
       <h1>REDBERRY</h1>
@@ -71,7 +72,7 @@
                         <input type="text" id="min-price" placeholder="მ²">
                     </div>
                     <div class="input-group">
-                        <label for="max-price">დმდე</label>
+                        <label for="max-price">მდე</label>
                         <input type="text" id="max-price" placeholder="მ²">
                     </div>
                 </div>
@@ -115,7 +116,7 @@
           </div>
         </div>
         <div class="right-side">
-          <button id="listing-button" class="listing-button">+ ლისტინგის დამატება</button>
+          <a href="addlisting.html"><button id="listing-button" class="listing-button">+ ლისტინგის დამატება</button></a>
 
 <!-- daamate agenti -->
 <button id="agent-button" class="agent-button">+ აგენტის დამატება</button>
@@ -168,17 +169,17 @@
       </div>
     </main>
 
-    <div class="wrapper">
-<div class="cards-component">
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
-</div>
+<div class="wrapper">
+  <div class="cards-component" id="real-estate-list">
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+    <div class="cards"></div>
+  </div>
 </div>
 
   </body>
