--- a/addlisting.html
+++ b/addlisting.html
@@ -78,7 +78,7 @@
                     <textarea id="description" rows="4" required></textarea>
                 </div>
 
-                    
+
                 <div class="form-group">
                     <label>ატვირთეთ ფოტო *</label>
                     <div class="photo-upload">
@@ -95,7 +95,7 @@
             </form>
         </div>
         <div class="buttons">
-            <button type="button" class="btn btn-cancel">გაუქმება</button>
+            <a href="index.html"><button type="button" class="btn btn-cancel">გაუქმება</button></a>
             <button type="submit" class="btn btn-submit">დაამატე ლისტინგი</button>
         </div>
     </div>
