--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- 9d05fa86-f508-47f7-a9e9-f56543ac5037 -->
     <!-- სათაურის ნაწილი -->
     <header class="header" id="header">
-      <h1>REDBERRY</h1>
+      <a href="index.html"><h1>REDBERRY</h1></a>
     </header>
     <!-- მთავარი ნაწილი -->
     <main class="main" id="main">
