--- a/listingpage.html
+++ b/listingpage.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>REDBERRY</h1>
+        <a href="index.html"><h1>REDBERRY</h1></a>
     </header>
     <a href="index.html" class="back-link">
         <img src="icon-arrow-left.png" alt="Back" class="arrow">
