--- a/addlisting.html
+++ b/addlisting.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>REDBERRY</h1>
+        <a href="index.html"><h1>REDBERRY</h1></a>
     </header>
 
     <div class="content-wrapper">
@@ -96,7 +96,7 @@
         </div>
         <div class="buttons">
             <a href="index.html"><button type="button" class="btn btn-cancel">გაუქმება</button></a>
-            <button type="submit" class="btn btn-submit">დაამატე ლისტინგი</button>
+            <a href="listingpage.html"><button type="submit" class="btn btn-submit">დაამატე ლისტინგი</button></a>
         </div>
     </div>
     
