--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 
 
           <div class="bedroom-container">
-            <button class="bedroom-button" id="bedroom-button"> საძინებლის რაოდენობა <span class="arrow">▼</span>
+            <button class="bedroom-button" id="bedroom-button"> საძინებლების რაოდენობა <span class="arrow">▼</span>
             </button>
             <div class="bedroom-dropdown" id="bedroom-dropdown">
               <div class="bedroom-dropdown-content">
-                <label for="bedroom-count">საძინებლის რაოდენობა</label>
+                <label for="bedroom-count">საძინებლების რაოდენობა</label>
                 <input type="number" id="bedroom-count" min="1" value="2">
                 <button class="bedroom-choose">არჩევა</button>
               </div>
@@ -181,6 +181,16 @@
     <div class="cards"></div>
   </div>
 </div>
-
+<!-- <span class="tag">იყიდება</span> -->
+<!-- .tag {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color:  #02152680;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 20px;
+  font-size: 12px;
+} -->
   </body>
 </html>
