--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 
         </div>
       </div>
+      
     </main>
+    <div class="filter-display" style="width: 553px; height: 29px; overflow: hidden;"></div>
 
 <div class="wrapper">
   <div class="cards-component" id="real-estate-list">
