--- a/index.html
+++ b/index.html
@@ -129,24 +129,24 @@
                 <div class="agent-form-group">
                     <label for="agent-name" class="agent-form-label">სახელი*</label>
                     <input type="text" id="agent-name" class="agent-form-input" required>
-                    <p class="agent-form-hint">მინიმუმ ორი სიმბოლო</p>
+                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო</p>
                 </div>
                 <div class="agent-form-group">
                     <label for="agent-email" class="agent-form-label">ელ-ფოსტა*</label>
                     <input type="email" id="agent-email" class="agent-form-input" required>
-                    <p class="agent-form-hint">გამოიყენეთ @redberry.ge ფოსტა</p>
+                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> გამოიყენეთ @redberry.ge ფოსტა</p>
                 </div>
             </div>
             <div class="agent-form-column">
                 <div class="agent-form-group">
                     <label for="agent-surname" class="agent-form-label">გვარი*</label>
                     <input type="text" id="agent-surname" class="agent-form-input" required>
-                    <p class="agent-form-hint">მინიმუმ ორი სიმბოლო</p>
+                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო</p>
                 </div>
                 <div class="agent-form-group">
                     <label for="agent-phone" class="agent-form-label">ტელეფონის ნომერი</label>
                     <input type="tel" id="agent-phone" class="agent-form-input">
-                    <p class="agent-form-hint">მხოლოდ რიცხვები</p>
+                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მხოლოდ რიცხვები</p>
                 </div>
             </div>
             <div class="agent-form-group agent-form-group-full">
