--- a/index.html
+++ b/index.html
@@ -150,11 +150,21 @@
                 </div>
             </div>
             <div class="agent-form-group agent-form-group-full">
-                <label for="agent-photo" class="agent-form-label">ატვირთეთ ფოტო*</label>
-                <div class="agent-form-file-upload" id="agent-photo">
-                    <span>+</span>
-                </div>
-            </div>
+              <label for="agent-photo" class="agent-form-label">ატვირთეთ ფოტო *</label>
+              <div class="agent-form-file-upload" id="agent-photo">
+                  <div class="upload-placeholder">
+                      <span class="upload-icon">+</span>
+                  </div>
+                  <div class="file-preview">
+                      <img src="" alt="Uploaded photo" class="preview-image">
+                      <button class="remove-file">
+                          <img src="trash-icon.png" alt="Remove" class="trash-icon">
+                      </button>
+                  </div>
+              </div>
+          </div>
+
+
             <div class="agent-form-button-group">
                 <button type="button" class="agent-form-btn agent-form-btn-cancel">გაუქმება</button>
                 <button type="submit" class="agent-form-btn agent-form-btn-submit">დაამატე აგენტი</button>
