--- a/index.html
+++ b/index.html
@@ -65,33 +65,31 @@
           <div class="area-dropdown" id="area-dropdown">
             <button class="area-button" id="area-button">ფართობი <span class="arrow">▼</span></button>
             <div class="area-selector">
-                <h3>ფართობის მითითებით</h3>
+                <h3>ფართობის მიხედვით</h3>
                 <div class="area-inputs">
                     <div class="input-group">
-                        <label for="min-price">დან</label>
-                        <input type="text" id="min-price" placeholder="მ²">
+                        <input type="text" id="min-price" placeholder="დან მ²">
                     </div>
                     <div class="input-group">
-                        <label for="max-price">მდე</label>
-                        <input type="text" id="max-price" placeholder="მ²">
+                        <input type="text" id="max-price" placeholder="მდე მ²">
                     </div>
                 </div>
                 <div class="area-options">
-                    <div class="area-column">
-                        <h4>მინ. ₾</h4>
-                        <div class="area-option">50,000 ₾</div>
-                        <div class="area-option">100,000 ₾</div>
-                        <div class="area-option">150,000 ₾</div>
-                        <div class="area-option">200,000 ₾</div>
-                        <div class="area-option">300,000 ₾</div>
+                    <div class="area-column-left">
+                        <h4>მინ. მ²</h4>
+                        <div class="area-option">50 მ²</div>
+                        <div class="area-option">100 მ²</div>
+                        <div class="area-option">150 მ²</div>
+                        <div class="area-option">200 მ²</div>
+                        <div class="area-option">300 მ²</div>
                     </div>
-                    <div class="area-column">
-                        <h4>მაქს. ₾</h4>
-                        <div class="area-option">50,000 ₾</div>
-                        <div class="area-option">100,000 ₾</div>
-                        <div class="area-option">150,000 ₾</div>
-                        <div class="area-option">200,000 ₾</div>
-                        <div class="area-option">300,000 ₾</div>
+                    <div class="area-column-right">
+                        <h4>მაქს. მ²</h4>
+                        <div class="area-option">50 მ²</div>
+                        <div class="area-option">100 მ²</div>
+                        <div class="area-option">150 მ²</div>
+                        <div class="area-option">200 მ²</div>
+                        <div class="area-option">300 მ²</div>
                     </div>
                 </div>
                 <button class="area-choose" id="area-choose">არჩევა</button>
