--- a/addlisting.html
+++ b/addlisting.html
@@ -6,6 +6,7 @@
     <title>Add Listing</title>
     <link rel="stylesheet" href="addlisting.css">
     <script src="addlisting.js" defer></script>
+    <script src="addagent.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
