--- a/listingpage.html
+++ b/listingpage.html
@@ -57,7 +57,7 @@
                             <h3 class="listing-header">Do you want to delete this listing?</h3>
                             <div class="button-container">
                                 <button class="cancel-btn" id="cancel-btn">Cancel</button>
-                                <button class="approve-btn">Confirm</button>
+                                <a href="index.html"><button class="approve-btn">Confirm</button></a>
                             </div>
                         </div>
                     </div>
