--- a/addlisting.html
+++ b/addlisting.html
@@ -6,7 +6,6 @@
     <title>Add Listing</title>
     <link rel="stylesheet" href="addlisting.css">
     <script src="addlisting.js" defer></script>
-    <script src="addagent.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -110,8 +109,10 @@
                 <div class="choose-agent-now">
                     <p>აირჩიე</p>
                     <select id="agent">
-                        <option value="">აირჩიე</option>
+                        <!-- <option value="add-new-agent">+ დაამატე აგენტი</option> -->
+                        
                         <option value=""></option>
+                        
                     </select>
                     <button id="agent-button">+ დაამატე აგენტი</button>
                 </div>
