--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <!-- 9d05fa86-f508-47f7-a9e9-f56543ac5037 -->
+    <!-- 9d087282-e845-40ec-9e4a-1618e8ddb056 -->
     <!-- სათაურის ნაწილი -->
     <header class="header" id="header">
-      <a href="index.html"><h1>REDBERRY</h1></a>
+      <a href="index.html">
+        <h1>REDBERRY</h1>
+      </a>
     </header>
     <!-- მთავარი ნაწილი -->
     <main class="main" id="main">
@@ -58,49 +60,40 @@
               <button class="price-btn">არჩევა</button>
             </div>
           </div>
-
-
-
-
           <div class="area-dropdown" id="area-dropdown">
-            <button class="area-button" id="area-button">ფართობი <span class="arrow">▼</span></button>
+            <button class="area-button" id="area-button">ფართობი <span class="arrow">▼</span>
+            </button>
             <div class="area-selector">
-                <h3>ფართობის მიხედვით</h3>
-                <div class="area-inputs">
-                    <div class="input-group">
-                        <input type="text" id="min-price" placeholder="დან მ²">
-                    </div>
-                    <div class="input-group">
-                        <input type="text" id="max-price" placeholder="მდე მ²">
-                    </div>
+              <h3>ფართობის მიხედვით</h3>
+              <div class="area-inputs">
+                <div class="input-group">
+                  <input type="text" id="min-price" placeholder="დან მ²">
                 </div>
-                <div class="area-options">
-                    <div class="area-column-left">
-                        <h4>მინ. მ²</h4>
-                        <div class="area-option">50 მ²</div>
-                        <div class="area-option">100 მ²</div>
-                        <div class="area-option">150 მ²</div>
-                        <div class="area-option">200 მ²</div>
-                        <div class="area-option">300 მ²</div>
-                    </div>
-                    <div class="area-column-right">
-                        <h4>მაქს. მ²</h4>
-                        <div class="area-option">50 მ²</div>
-                        <div class="area-option">100 მ²</div>
-                        <div class="area-option">150 მ²</div>
-                        <div class="area-option">200 მ²</div>
-                        <div class="area-option">300 მ²</div>
-                    </div>
+                <div class="input-group">
+                  <input type="text" id="max-price" placeholder="მდე მ²">
                 </div>
-                <button class="area-choose" id="area-choose">არჩევა</button>
+              </div>
+              <div class="area-options">
+                <div class="area-column-left">
+                  <h4>მინ. მ²</h4>
+                  <div class="area-option">50 მ²</div>
+                  <div class="area-option">100 მ²</div>
+                  <div class="area-option">150 მ²</div>
+                  <div class="area-option">200 მ²</div>
+                  <div class="area-option">300 მ²</div>
+                </div>
+                <div class="area-column-right">
+                  <h4>მაქს. მ²</h4>
+                  <div class="area-option">50 მ²</div>
+                  <div class="area-option">100 მ²</div>
+                  <div class="area-option">150 მ²</div>
+                  <div class="area-option">200 მ²</div>
+                  <div class="area-option">300 მ²</div>
+                </div>
+              </div>
+              <button class="area-choose" id="area-choose">არჩევა</button>
             </div>
-        </div>
-        
-
-
-
-
-
+          </div>
           <div class="bedroom-container">
             <button class="bedroom-button" id="bedroom-button"> საძინებლების რაოდენობა <span class="arrow">▼</span>
             </button>
@@ -114,76 +107,77 @@
           </div>
         </div>
         <div class="right-side">
-          <a href="addlisting.html"><button id="listing-button" class="listing-button">+ ლისტინგის დამატება</button></a>
-
-<!-- daamate agenti -->
-<button id="agent-button" class="agent-button">+ აგენტის დამატება</button>
-
-<div id="agent-modal" class="agent-modal hidden">
-    <div class="agent-form-container">
-        <h1 class="agent-form-title">აგენტის დამატება</h1>
-        <form class="agent-form">
-            <div class="agent-form-column">
-                <div class="agent-form-group">
+          <a href="addlisting.html">
+            <button id="listing-button" class="listing-button">+ ლისტინგის დამატება</button>
+          </a>
+          <!-- daamate agenti -->
+          <button id="agent-button" class="agent-button">+ აგენტის დამატება</button>
+          <div id="agent-modal" class="agent-modal hidden">
+            <div class="agent-form-container">
+              <h1 class="agent-form-title">აგენტის დამატება</h1>
+              <form class="agent-form">
+                <div class="agent-form-column">
+                  <div class="agent-form-group">
                     <label for="agent-name" class="agent-form-label">სახელი*</label>
                     <input type="text" id="agent-name" class="agent-form-input" required>
-                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო</p>
-                </div>
-                <div class="agent-form-group">
+                    <p class="agent-form-hint">
+                      <img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო
+                    </p>
+                  </div>
+                  <div class="agent-form-group">
                     <label for="agent-email" class="agent-form-label">ელ-ფოსტა*</label>
                     <input type="email" id="agent-email" class="agent-form-input" required>
-                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> გამოიყენეთ @redberry.ge ფოსტა</p>
+                    <p class="agent-form-hint">
+                      <img src="check-default.png" alt="default"> გამოიყენეთ @redberry.ge ფოსტა
+                    </p>
+                  </div>
                 </div>
-            </div>
-            <div class="agent-form-column">
-                <div class="agent-form-group">
+                <div class="agent-form-column">
+                  <div class="agent-form-group">
                     <label for="agent-surname" class="agent-form-label">გვარი*</label>
                     <input type="text" id="agent-surname" class="agent-form-input" required>
-                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო</p>
-                </div>
-                <div class="agent-form-group">
+                    <p class="agent-form-hint">
+                      <img src="check-default.png" alt="default"> მინიმუმ ორი სიმბოლო
+                    </p>
+                  </div>
+                  <div class="agent-form-group">
                     <label for="agent-phone" class="agent-form-label">ტელეფონის ნომერი</label>
                     <input type="tel" id="agent-phone" class="agent-form-input">
-                    <p class="agent-form-hint"><img src="check-default.png" alt="default"> მხოლოდ რიცხვები</p>
-                </div>
-            </div>
-            <div class="agent-form-group agent-form-group-full">
-              <label for="agent-photo" class="agent-form-label">ატვირთეთ ფოტო *</label>
-              <div class="agent-form-file-upload" id="agent-photo">
-                  <div class="upload-placeholder">
-                      <span class="upload-icon">+</span>
+                    <p class="agent-form-hint">
+                      <img src="check-default.png" alt="default"> მხოლოდ რიცხვები
+                    </p>
                   </div>
-                  <div class="file-preview">
+                </div>
+                <div class="agent-form-group agent-form-group-full">
+                  <label for="agent-photo" class="agent-form-label">ატვირთეთ ფოტო *</label>
+                  <div class="agent-form-file-upload" id="agent-photo">
+                    <div class="upload-placeholder">
+                      <span class="upload-icon">+</span>
+                    </div>
+                    <div class="file-preview">
                       <img src="" alt="Uploaded photo" class="preview-image">
                       <button class="remove-file">
-                          <img src="trash-icon.png" alt="Remove" class="trash-icon">
+                        <img src="trash-icon.png" alt="Remove" class="trash-icon">
                       </button>
+                    </div>
                   </div>
-              </div>
-          </div>
-
-
-            <div class="agent-form-button-group">
-                <button type="button" class="agent-form-btn agent-form-btn-cancel">გაუქმება</button>
-                <button type="submit" class="agent-form-btn agent-form-btn-submit">დაამატე აგენტი</button>
+                </div>
+                <div class="agent-form-button-group">
+                  <button type="button" class="agent-form-btn agent-form-btn-cancel">გაუქმება</button>
+                  <button type="submit" class="agent-form-btn agent-form-btn-submit">დაამატე აგენტი</button>
+                </div>
+              </form>
             </div>
-        </form>
-    </div>
-</div>
-<!-- daamate agenti -->
-
-
+          </div>
+          <!-- daamate agenti -->
         </div>
       </div>
-      
     </main>
     <div class="filter-display" style="width: 553px; height: 29px; overflow: hidden;"></div>
-
-<div class="wrapper">
-  <div class="cards-component" id="real-estate-list">
-    <div class="cards"></div>
-  </div>
-</div>
-
+    <div class="wrapper">
+      <div class="cards-component" id="real-estate-list">
+        <div class="cards"></div>
+      </div>
+    </div>
   </body>
 </html>
